fix text alignment on mobile only

--- a/style.css
+++ b/style.css
@@ -140,6 +140,10 @@ header .tagline {
 }
 
 @media screen and (max-width: 1500px) {
+  header {
+    text-align: center;
+  }
+
   header .title {
     font-size: 50px;
   }
